--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "4.17.1",
     "md5": "^2.3.0",
+    "mongoose": "^6.0.6",
     "nodemon": "^2.0.12"
   }
 }
